# slopstopper

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
src/: analyze.py  compare_models.py  ingest.py  prompts.py  report.py  schema.py
tests/: conftest.py  test_analyze.py
